--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Yogalax - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Yoga with J.C.</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -74,14 +74,12 @@
     </nav>
     <!-- END nav -->
 
-
-
     <section class="ftco-section">
       <div class="container-fluid">
         <div class="row justify-content-center mb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
             <h3 class="subheading">*****</h3>
-            <h2 class="mb-1">More about  J.C.</h2>
+            <h2 class="mb-1">More about J.C.</h2>
           </div>
         </div>
         <div class="row">
@@ -121,8 +119,6 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
     </section>
