--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Yogalax - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Yoga with J.C.</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
