updated logo design and navbar spacing

--- a/about.html
+++ b/about.html
@@ -38,8 +38,12 @@
     >
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          ><img src="./images/JC-Yoga-Logo.png" alt="Logo" width="100" />Yoga
-          with J.C.</a
+          ><img
+            src="./images/JC-Yoga-Logo - Circle.png"
+            alt="Logo"
+            width="100"
+          />
+          <span id="logo-title-text"> Yoga with J.C.</span></a
         >
         <button
           class="navbar-toggler"
