--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,12 @@
     >
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          ><img src="./images/JC-Yoga-Logo.png" alt="Logo" width="100" />Yoga
-          with J.C.</a
+          ><img
+            src="./images/JC-Yoga-Logo - Circle.png"
+            alt="Logo"
+            width="100"
+          />
+          <span id="logo-title-text"> Yoga with J.C.</span></a
         >
         <button
           class="navbar-toggler"
@@ -73,8 +77,6 @@
       </div>
     </nav>
     <!-- END nav -->
-
-
 
     <section class="ftco-section contact-section">
       <div class="container">
@@ -155,7 +157,6 @@
         </div>
       </div>
     </section>
-
 
     <footer class="ftco-footer ftco-section img">
       <div class="overlay"></div>
