--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     >
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          ><img src="./images/JC-Yoga-Logo.png" alt="Logo" width="100" />Yoga
-          with J.C.</a
+          ><img
+            src="./images/JC-Yoga-Logo - Circle.png"
+            alt="Logo"
+            width="100"
+          />
+          <span id="logo-title-text"> Yoga with J.C.</span></a
         >
         <button
           class="navbar-toggler"
@@ -92,18 +96,14 @@
       </div>
     </section>
 
-    <section
-      class="ftco-section ftco-intro"
-      style="background-image: url()"
-    >
+    <section class="ftco-section ftco-intro" style="background-image: url()">
       <div class="container">
         <div class="row justify-content-end">
           <div class="col">
-            <img src="images/Headshot.jpg"  width="100%" alt="">
+            <img src="images/Headshot.jpg" width="100%" alt="" />
           </div>
           <div class="col-md-6">
             <div class="heading-section ftco-animate">
-              
               <h2 class="mb-4">Why You Should Go To Yoga</h2>
             </div>
             <p class="ftco-animate">
@@ -359,8 +359,6 @@
         </div>
       </div>
     </section>
-
-
 
     <section class="ftco-gallery ftco-section">
       <div class="container">
